--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
    "name": "repository-name",
    "dependencies": {
      "@dataform/core": "2.0.3",
-     "dataform-scd": "https://github.com/dataform-co/dataform-scd/archive/0.3.tar.gz"
+     "dataform-scd": "https://github.com/dataform-co/dataform-scd/archive/0.3.tar.gz",
      "post-office" : "0.3.2"
    }
  }
