--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
    "dependencies": {
      "@dataform/core": "2.0.3",
      "dataform-scd": "https://github.com/dataform-co/dataform-scd/archive/0.3.tar.gz",
-     "post-office" : "0.3.2"
+     "post-office" : "0.3.2",
+     "react-pdf" : " 9.0.0"
    }
  }
