--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
  {
    "name": "repository-name",
    "dependencies": {
-     "@dataform/core": "2.9.0",
+     "@dataform/core": "3.0.0-beta.0",
      "post-office" : "0.3.2",
      "react-pdf" : " 9.0.0"
    }
